Examples/fail/not-a-record-01.stella
language core;

fn main(n : Nat) -> Nat {
    return {}.meow
}
